# direct-fast

./: README.md  SCHEDULER_USAGE.md  pyproject.toml  requirements.txt
examples/: cafe24_example.py
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: cafe24.py  relay.py
src/assets/: dept-meta-advertise-a17cb36a4928.json
src/assets/files/: brand_names.py
src/core/: config.py  logging.py  scheduler.py
src/events/meta-catalog-ad/: index.py
src/interfaces/: aws.py  bfl.py  cafe24.py  gemini.py  google_sheet.py
src/tasks/: jobs.py
src/utils/image/: compress_image.py
src/utils/meta/: meta_advertise_image.py
